test_suite/tests/ui/common/cfg_attr_missing_attribute.stderr
error: expected `,`
 --> tests/ui/common/cfg_attr_missing_attribute.rs:6:18
  |
6 |     cfg_attr(test),
  |                  ^
